--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "cloudinary": "^1.14.0",
     "dotenv": "^8.0.0",
     "graphql-yoga": "^1.18.1",
+    "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.6",
     "mysql": "^2.17.1",
+    "nodejs-nodemailer-outlook": "^1.2.1",
+    "nodemailer": "^6.4.0",
+    "npm": "^6.13.2",
     "pg": "^7.12.0"
   }
 }
