--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "body": "^5.1.0",
     "cloudinary": "^1.14.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.0.0",
+    "express": "^4.17.1",
     "graphql-yoga": "^1.18.1",
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
@@ -27,6 +30,7 @@
     "nodejs-nodemailer-outlook": "^1.2.1",
     "nodemailer": "^6.4.0",
     "npm": "^6.13.2",
+    "parser": "^0.1.4",
     "pg": "^7.12.0"
   }
 }
