--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "author": "frnk",
   "license": "MIT",
   "dependencies": {
+    "apollo-server": "^2.11.0",
+    "apollo-server-express": "^2.11.0",
     "bcrypt": "^3.0.6",
     "body": "^5.1.0",
     "cloudinary": "^1.14.0",
@@ -23,6 +25,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "graphql-yoga": "^1.18.1",
+    "http": "0.0.0",
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.6",
