--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "nodemailer": "^6.4.0",
     "npm": "^6.13.2",
     "parser": "^0.1.4",
-    "pg": "^7.12.0"
+    "pg": "^7.12.0",
+    "socket.io": "^2.3.0"
   }
 }
