--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "Backend con graphql",
   "main": "index.js",
+  "engines": {
+    "node": "12.16.1"
+    },
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
