--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "cloudinary": "^1.14.0",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
-    "express": "^4.17.1",
+    "express": "^4.18.1",
     "graphql-yoga": "^1.18.1",
     "http": "0.0.0",
     "install": "^0.13.0",
@@ -35,6 +35,7 @@
     "mysql": "^2.17.1",
     "nodejs-nodemailer-outlook": "^1.2.1",
     "nodemailer": "^6.4.0",
+    "nodemon": "^2.0.19",
     "npm": "^6.13.2",
     "parser": "^0.1.4",
     "pg": "^7.12.0",
