--- a/package.json
+++ b/package.json
@@ -20,26 +20,33 @@
   "author": "frnk",
   "license": "MIT",
   "dependencies": {
-    "apollo-server": "^2.26.1",
-    "apollo-server-express": "^2.26.1",
-    "bcrypt": "^3.0.8",
+    "@apollo/server": "^4.10.0",
+    "apollo-server": "^3.13.0",
+    "apollo-server-express": "^3.13.0",
+    "bcrypt": "^5.1.1",
     "body": "^5.1.0",
-    "cloudinary": "^1.32.0",
+    "body-parser": "^1.20.2",
+    "cloudinary": "^2.0.1",
     "cors": "^2.8.5",
-    "dotenv": "^8.6.0",
+    "dotenv": "^16.4.2",
     "express": "^4.18.2",
-    "graphql-yoga": "^1.18.3",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.8.0",
+    "graphql-import": "^1.0.2",
+    "graphql-server-express": "^1.4.1",
+    "graphql-tools": "^9.0.0",
+    "graphql-yoga": "^5.1.1",
     "http": "0.0.0",
     "install": "^0.13.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.15",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.2",
     "mysql": "^2.18.1",
     "nodejs-nodemailer-outlook": "^1.2.4",
-    "nodemailer": "^6.8.0",
-    "nodemon": "^2.0.20",
-    "npm": "^6.14.17",
+    "nodemailer": "^6.9.9",
+    "nodemon": "^3.0.3",
+    "npm": "^10.4.0",
     "parser": "^0.1.4",
-    "pg": "^7.18.2",
-    "socket.io": "^2.5.0"
+    "pg": "^8.11.3",
+    "socket.io": "^4.7.4"
   }
 }
