--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Backend con graphql",
   "main": "index.js",
   "engines": {
-    "node": "12.16.1",
-    "stack": "heroku-22"
+    "node": "12.16.1"
   },
   "scripts": {
     "start": "node index.js",
