--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.0.1",
   "description": "Backend con graphql",
   "main": "index.js",
-  "engines": {
-    "node": "12.16.1"
-  },
+  "engines": { "node": "12.x", "npm": "^10.4.0" },
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
